# PredEx

./: .gitignore  Data_Preprocessing.ipynb  Graph_Rules.ipynb  LCS_train.ipynb  README  boqa.ipynb  data_gen.ipynb  environment.yml  exstracs.ipynb  exstracs.py  exstracs_eval.ipynb  historeport.ipynb  histotree.ipynb  pubmed.ipynb  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  Dossier_Patient_clean_myocapt_KC_v6.xlsx.dvc  histo_fake_data.csv.dvc  histo_feature.csv.dvc
data_raw/: dataset.csv.dvc  raw_dataset.csv.dvc  real_data_dataset.csv.dvc  synthetic_dataset.csv.dvc
model/: .gitignore  features_col.list.dvc
old_notebooks/: boqa.ipynb  exstracs_eval.py  historeport.ipynb  spacy.ipynb
