[tool.poetry]
name = "PredEx"
version = "0.1.0"
description = "Training and exploring a rule-base classifier (LCS) for diagnosis and knowledge discovery"
authors = ["Corentin Meyer <corentin.meyer@etu.unsitra.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4"
matplotlib = "^3"
numpy = "^1.22"
scikit-learn = "^1"
skrebate = "^0"
scikit-ExSTraCS = "^1"
ipykernel = "^6"
pyvis = "^0"
requests = "^2.27.1"
plotly = "^5.7.0"
bokeh = "2.4.3"
holoviews = "1.14.8"

[tool.poetry.dev-dependencies]
pylint = "^2"
black = "^22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
